--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>My Projects</title>
     <style>
         body {
-            font-family: 'Arial', sans-serif; /* Updated font family */
+            font-family: 'Arial', sans-serif; 
             background-color: #f4f4f4;
             margin: 0;
             padding: 20px;
@@ -19,32 +19,32 @@
         h1 {
             color: #333;
             margin-bottom: 20px;
-            font-size: 32px; /* Bigger font for title */
-            font-family: 'Georgia', serif; /* Different font for title */
+            font-size: 32px; 
+            font-family: 'Georgia', serif;
         }
 
         table {
-            width: 100%; /* Full screen width */
-            border-collapse: separate; /* Separate the rows */
-            border-spacing: 0 15px; /* Add gap between rows */
+            width: 100%;
+            border-collapse: separate; 
+            border-spacing: 0 15px; 
             margin: 20px 0;
             background-color: #fff;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
 
         th, td {
-            padding: 16px; /* Increased padding for better spacing */
+            padding: 16px;
             text-align: left;
-            font-size: 18px; /* Bigger font size */
+            font-size: 18px; 
             border-bottom: 1px solid #ddd;
-            font-family: 'Verdana', sans-serif; /* Different font for table content */
+            font-family: 'Verdana', sans-serif;
         }
 
         th {
             background-color: #007bff;
             color: white;
-            font-size: 20px; /* Bigger font size for table headers */
-            font-family: 'Tahoma', sans-serif; /* Different font for table headers */
+            font-size: 20px; 
+            font-family: 'Tahoma', sans-serif; 
         }
 
         tr:hover {
@@ -53,16 +53,16 @@
 
         a {
             text-decoration: none;
-            color: #007bff; /* Link color */
-            cursor: pointer; /* Cursor pointer style */
+            color: #007bff;
+            cursor: pointer; 
         }
 
         a:hover {
-            text-decoration: underline; /* Underline on hover */
+            text-decoration: underline; 
         }
 
         .container {
-            width: 100%; /* Full width container */
+            width: 100%; 
         }
     </style>
 </head>
@@ -79,42 +79,55 @@
                 </tr>
             </thead>
             <tbody>
-                <tr>
+                <tr></tr>
                     <td>1</td>
+                    <td><a href="./JBL-Webiste/index.html">JBL Website</a></td>
+                    <td>HTML, CSS, Bootstrap, JS</td>
+                    <td>A responsive website showcasing JBL products and features.</td>
+                </tr>
+                <tr>
+                    <td>2</td>
+                    <td><a href="./PS5-Website/index.html">PS5-Website</a></td>
+                    <td>HTML, CSS, Bootstrap, JS</td>
+                    <td>A responsive website showcasing JBL products and features.</td>
+                </tr>
+                <tr>
+                    <td>3</td>
+                    <td><a href="./Titan-Website/index.html">Titan-Website</a></td>
+                    <td>HTML, CSS, Bootstrap, JS</td>
+                    <td>A responsive website showcasing JBL products and features.</td>
+                </tr>
+                <tr>
+                    <td>4</td>
                     <td><a href="./Audio-player/index.html">Audio Player</a></td>
                     <td>HTML, CSS, JS</td>
                     <td>A web-based audio player that supports various audio formats and playlists.</td>
                 </tr>
                 <tr>
-                    <td>2</td>
+                    <td>5</td>
                     <td><a href="./Dice/index.html">Dice Game</a></td>
                     <td>HTML, CSS, JS</td>
                     <td>A simple dice game that simulates rolling dice with random outcomes.</td>
                 </tr>
                 <tr>
-                    <td>3</td>
+                    <td>6</td>
                     <td><a href="./Digital-Clock/index.html">Digital Clock</a></td>
                     <td>HTML, CSS, JS</td>
                     <td>A live digital clock displaying current time and date.</td>
                 </tr>
                 <tr>
-                    <td>4</td>
+                    <td>7</td>
                     <td><a href="./E-Learning/index-file/index.html">E-Learning Platform</a></td>
                     <td>HTML, CSS, Bootstrap, JS</td>
                     <td>An interactive platform for online learning with courses and quizzes.</td>
                 </tr>
                 <tr>
-                    <td>5</td>
+                    <td>8</td>
                     <td><a href="./E-Libary-Manage-System/index.html">E-Library Management System</a></td>
                     <td>HTML, CSS, JS</td>
                     <td>A system to manage library resources and keep track of books.</td>
                 </tr>
-                <tr>
-                    <td>6</td>
-                    <td><a href="./JBL-Webiste/index.html">JBL Website</a></td>
-                    <td>HTML, CSS, Bootstrap, JS</td>
-                    <td>A responsive website showcasing JBL products and features.</td>
-                </tr>
+                
             </tbody>
         </table>
     </div>
