--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 </tr>
             </thead>
             <tbody>
-                <tr></tr>
+                <tr>
                     <td>1</td>
                     <td><a href="./JBL-Webiste/index.html">JBL Website</a></td>
                     <td>HTML, CSS, Bootstrap, JS</td>
@@ -87,16 +87,17 @@
                 </tr>
                 <tr>
                     <td>2</td>
-                    <td><a href="./PS5-Website/index.html">PS5-Website</a></td>
+                    <td><a href="./PS5-Website/index.html">PS5 Website</a></td>
                     <td>HTML, CSS, Bootstrap, JS</td>
-                    <td>A responsive website showcasing JBL products and features.</td>
+                    <td>A modern, responsive website dedicated to showcasing the PlayStation 5 console, featuring detailed product information, reviews, and available games.</td>
                 </tr>
                 <tr>
                     <td>3</td>
-                    <td><a href="./Titan-Website/index.html">Titan-Website</a></td>
+                    <td><a href="./Titan-Website/index.html">Titan Website</a></td>
                     <td>HTML, CSS, Bootstrap, JS</td>
-                    <td>A responsive website showcasing JBL products and features.</td>
+                    <td>A responsive website for Titan watches, highlighting different collections, features, and the latest models, with a clean and elegant design.</td>
                 </tr>
+                
                 <tr>
                     <td>4</td>
                     <td><a href="./Audio-player/index.html">Audio Player</a></td>
