--- a/index.html
+++ b/index.html
@@ -88,13 +88,13 @@
                 <tr>
                     <td>2</td>
                     <td><a href="./PS5-Website/index.html">PS5 Website</a></td>
-                    <td>HTML, CSS, Bootstrap, JS</td>
+                    <td>HTML, CSS, Bootstrap</td>
                     <td>A modern, responsive website dedicated to showcasing the PlayStation 5 console, featuring detailed product information, reviews, and available games.</td>
                 </tr>
                 <tr>
                     <td>3</td>
                     <td><a href="./Titan-Website/index.html">Titan Website</a></td>
-                    <td>HTML, CSS, Bootstrap, JS</td>
+                    <td>HTML, CSS, Bootstrap</td>
                     <td>A responsive website for Titan watches, highlighting different collections, features, and the latest models, with a clean and elegant design.</td>
                 </tr>
                 
